care/force-app/main/default/objects/CCC_Global_Setting__mdt/CCC_Global_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Global Settings used by Contract Composer Lightning Components and related code.</description>
    <label>CCC Global Setting</label>
    <pluralLabel>CCC Global Settings</pluralLabel>
</CustomObject>