care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Active_Agreements_Nav_To_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Agreements_Nav_To_Opportunity__c</fullName>
    <label>Active Agreements Nav To Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>