care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Admin_Initial_Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Initial_Platform_Fee__c</fullName>
    <label>Admin Initial Platform Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>