care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Cancel_Agreement_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Agreement_Profiles__c</fullName>
    <description>A comma separated list of Salesforce Profiles that can see and are allowed to perform Cancel Agreement on the Active Agreement tab</description>
    <inlineHelpText>A comma separated list of Salesforce Profiles that can see and are allowed to perform Cancel Agreement on the Active Agreement tab</inlineHelpText>
    <label>Cancel Agreement Profiles</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>