care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Custom_Pricing_Individual_Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing_Individual_Minimum_Amount__c</fullName>
    <label>Custom Pricing Individual Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>