care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Default_Monthly_Web_Ad_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Default_Monthly_Web_Ad_Pricing__c</fullName>
    <label>Default Monthly Web Ad Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>