care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Display_Location_Specific_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Display_Location_Specific_Contact_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether location email and phone are displayed on the Vetting tab.</description>
    <label>Display Location Specific Contact Info</label>
    <type>Checkbox</type>
</CustomField>