care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Earliest_Web_Renewal_Months__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Web_Renewal_Months__c</fullName>
    <label>Earliest Web Renewal Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>