care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Enable_Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Enable_Additional_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the ability to add Additional Services to a location</description>
    <label>Enable Additional Services</label>
    <type>Checkbox</type>
</CustomField>