care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Estimated_Termination_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Termination_Fee_Percentage__c</fullName>
    <label>Estimated Termination Fee Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>