care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Galore_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Galore_API_Key__c</fullName>
    <description>API Key to use for the Galore API</description>
    <inlineHelpText>API Key to use for the Galore API</inlineHelpText>
    <label>Galore API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>