care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Min_Months_for_Remaining_Supersede__c.field-meta.xml
<CustomField>
    <fullName>Min_Months_for_Remaining_Supersede__c</fullName>
    <label>Min Months for Remaining Supersede</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>