care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Min_Tuition_Discount_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Min_Tuition_Discount_Dollar__c</fullName>
    <label>Min Tuition Discount Dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>