care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Points_Web_Ad_Pricing_Tier_Bonus_Thresh__c.field-meta.xml
<CustomField>
    <fullName>Points_Web_Ad_Pricing_Tier_Bonus_Thresh__c</fullName>
    <label>Points Web Ad Pricing Tier Bonus Thresh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>