care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Points_Web_Ad_Yearly_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Points_Web_Ad_Yearly_Bonus__c</fullName>
    <label>Points Web Ad Yearly Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>