care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/SO_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>SO_Record_Types__c</fullName>
    <label>SO Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>