care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Tuition_Discount_Bonus_Point_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Discount_Bonus_Point_Multiplier__c</fullName>
    <label>Tuition Discount Bonus Point Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>