care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Valid_Stages_for_Modifying_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Valid_Stages_for_Modifying_Agreement__c</fullName>
    <label>Valid Stages for Modifying Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>