care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Waive_Platform_Fee_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Waive_Platform_Fee_Profiles__c</fullName>
    <description>A comma-separated list of profile names that are allowed to edit the Waive Platform Fee value on the Contract Composer Administration tab.</description>
    <label>Waive Platform Fee Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>