care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Web_Ad_Start_Date_Max__c.field-meta.xml
<CustomField>
    <fullName>Web_Ad_Start_Date_Max__c</fullName>
    <label>Web Ad Start Date Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>