care/force-app/main/default/objects/CCC_Global_Setting__mdt/fields/Webhook_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Webhook_API_Key__c</fullName>
    <description>Incoming webhooks from Galore need to have this key defined in a &apos;api-key&apos; header in the incoming request.</description>
    <inlineHelpText>Incoming webhooks from Galore need to have this key defined in a &apos;api-key&apos; header in the incoming request.</inlineHelpText>
    <label>Webhook API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>